--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ addons:
   sonarcloud:
     organization: "cordeiro21"
     token:
-      secure: "1e38b654f92740f6cb91ea8f9077b883d57f530e" # encrypted value of your token
+      secure: eaf983d10fa96396a08ef4ce10bf4ee9875ba08f # encrypted value of your token
 
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
