--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ addons:
   sonarcloud:
     organization: "cordeiro21"
     token:
-      secure: eaf983d10fa96396a08ef4ce10bf4ee9875ba08f # encrypted value of your token
+      secure: "**************************" # encrypted value of your token
 
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=cordeiro21_cliente_8
