--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ addons:
   sonarcloud:
     organization: "cordeiro21"
     token:
-      secure: "**************************" # encrypted value of your token
+      secure: "05a886a097bc206063add83b20b57e2dc11c8846" # encrypted value of your token
 
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
