--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.url=jdbc:h2:file:./data/exemplo
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:./data/exemplo
 spring.datasource.username=sa
 spring.datasource.password=
 
